Ajustando o calculo das faltas de pagina